# python-pkg

./: .env.example  .gitignore  LICENSE  README.md  project.toml  pyproject.toml  requirements.txt
src/logtracing/: AbstractLogger..py  AbstractLogger.py  Logger.py  SlackMessageSender.py  Types.py  __init__.py  __main__.py  abstract_logger.py  base_classes.py  exception_logger.py  log_reporter.py  logger.py  migrations.json  slack_message_sender.py  types.py
src/logtracing/config/: database.py
src/logtracing/db/migrations/: 0001_migration_202308181306.py
src/logtracing/db/models/: abstract_logger.py  code_line.py  environment_details.py  error_exception.py  execution_arguments.py  execution_details.py  extra_details.py  log.py  log_group.py  main.py  stack.py  system_details.py
src/logtracing/docs/examples/: logs_basic_usage.py
